HW2 start: doLogin, setMyUsername, uploadPhoto, getMyStream, followUser and api.yaml corrections
